Fix overflowing content moving to next line

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -11,4 +11,9 @@
 
 .prettyprint {
     padding: 16px;
+    overflow-y: scroll;
+}
+
+.prettyprint code > div {
+    max-width: 0;
 }
